--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     //JavaPoetявляется Java API для генерации .javaисходных файлов.
     compile 'com.squareup:javapoet:1.9.0'
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    //Gson Converter
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
