--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     //Gson Converter
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //CircleImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    //CardView
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
