--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     //CardView
     compile 'com.android.support:cardview-v7:25.3.1'
+    //RecyclerView
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
