--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     //RecyclerView
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    //glide - для работы с изображениями
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
