--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -55,4 +57,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     //glide - для работы с изображениями
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //RxAndroid для реактивного програмирования
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    //для того чтобы retrofit2 преобразовывал ответ с сервера не в call, а в observable
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
